<resources>
    <string name="app_name">Fixsira</string>
    <string name="chooserservice">CHOOSE SERVICE</string>
    <string name="signup">SIGN UP</string>
    <string name="signin">SIGN IN</string>
    <string name="chooselanguage">CHOOSE LANGUAGE </string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="email">Email : </string>
    <string name="Phone">Mobile Number</string>
    <string name="password">Password</string>
    <string name="welcome">WELCOME</string>
    <string name="textsignin">SIGN IN TO CONTINUE</string>
    <string name="create">CREATE NEW ACCOUNT</string>
    <string name="arabic">ARABIC</string>
    <string name="english">ENGLISH</string>
    <string name="Profile">Profile</string>
    <string name="menu">Home</string>
    <string name="cart">Cart</string>
    <string name="setting">My Orders</string>
    <string name="internet">Turn on Internet</string>
    <string name="invalidemail">Invalid Email Or password</string>
    <string name="insertemail">please insert Mail</string>
    <string name="insertpassword">please insert Password</string>
    <string name="insertfirstname">please insert First Name</string>
    <string name="insertlastname">please insert Last Name</string>
    <string name="insertphone">please insert Phone</string>
    <string name="Successfull">Registered Successfully</string>
    <string name="emailfailed">Email is Used</string>
    <string name="arrival">Arrival Time</string>
    <string name="price">Price</string>
    <string name="Or">OR</string>
    <string name="Add">Add</string>
    <string name="reserve">Reserve</string>
    <string name="search"> Search</string>
    <string name="searchmodel">Model</string>
    <string name="CallDriver">Call Driver</string>
    <string name="sendmessage">Send Message</string>
    <string name="callnow">Call Now</string>
    <string name="callPlace">Call Place</string>
    <string name="details">Details</string>
    <string name="openplace">Open Time</string>
    <string name="closeplace">Close Time</string>
    <string name="Booknow">Book Now</string>
    <string name="aboutus">About Us</string>
    <string name="service">Services</string>
    <string name="facebook_app_id">299057070917866</string>
    <string name="spare">Spare Part</string>
    <string name="Descrption">Discrption</string>
    <string name="addcart">Add to Cart</string>
    <string name="cartsuccesfull">The product has been added To Cart</string>
    <string name="reservee">Reserve</string>
    <string name="servicerequest">Order Now</string>
    <string name="carName">User Name</string>
    <string name="carmodel">Vehicle Model :</string>
    <string name="year">Vehicle Year : </string>
    <string name="date">Date</string>
    <string name="thanks">Thanks For Your Order</string>
    <string name="orderid">Order id</string>
    <string name="skip">Finish</string>
    <string name="turnon">Turn On Your Gbs</string>
    <string name="name">Name : </string>
    <string name="products">Products</string>
    <string name="submit">Review</string>
    <string name="carname">Vehicle Name</string>
    <string name="status">Status</string>
    <string name="address">Address</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="company">Company</string>
    <string name="fax">Fax</string>
    <string name="postcode">Post Code</string>
    <string name="fullinformation">Full Information</string>
    <string name="note">Note</string>
    <string name="curency">Currency</string>
    <string name="revieworder">Review Vendor</string>
    <string name="reviewproduct">Review Product</string>
    <string name="language">Language</string>
    <string name="logout">Log out</string>
    <string name="cartybe">Vehicle Type</string>
    <string name="maintenencetybe">Service Type</string>
    <string name="fullname">Full Name</string>outside
    <string name="mob">Client Visit</string>
    <string name="onside">On Site</string>
    <string name="selectservice">Select Service</string>
    <string name="mobileservice">Client Visit</string>
    <string name="outside">On Site</string>
    <string name="showservices">Show Services</string>
    <string name="showproducts">Show Products</string>
    <string name="showtime">Works Day</string>
    <string name="day">Day</string>
    <string name="on">Open Time: </string>
    <string name="of">Close Time</string>
    <string name="pullcar">Vehicle  Towing</string>
    <string name="washingcar">Vehicle Washing</string>
    <string name="maintaince">Maintenance</string>
    <string name="spartpart">Spar Part</string>
    <string name="norate">No Rate</string>
    <string name="noproducts">No Products Found</string>
    <string name="look">What You Are looking for ?</string>
    <string name="totalprice">Total Price</string>
    <string name="rated">You Rated Before</string>
    <string name="ratedsuccess">Thanks For Your Rating</string>
    <string name="sortrate">Sort By Rate</string>
    <string name="sortdistance">Sort By Distance</string>
    <string name="reviewed">We Recieved Your Review</string>
    <string name="username">User Name :</string>
    <string name="mobile">Mobile Number :</string>
    <string name="schedule_date">schedule_date</string>
    <string name="servicename">Service Name</string>
    <string name="Direction">Direction</string>
    <string name="orderprice">Order Price</string>
    <string name="select">Select</string>
    <string name="nobranches">No Service Provider Found</string>
    <string name="insertcarmodel">Insert Car Model</string>
    <string name="insertcaryear">Insert Car Year</string>
    <string name="changepassword">Change Password</string>
    <string name="oldpass">Old Password</string>
    <string name="newpass">NewPassword</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="confirmchangepassword">Confirm Change Password...</string>
    <string name="askforchange">Are you sure you want Change Your Password ?</string>
    <string name="yes">Accept</string>
    <string name="no">Refuse</string>
    <string name="currentloca">Current Location</string>
    <string name="anotherloca">Another Location</string>
    <string name="insertoldpas">Insert Old Password</string>
    <string name="insertnewpas">Insert New password</string>
    <string name="passwordupdated">Password Updated Succesfully</string>
    <string name="wrongpass">Please Enter old password correct </string>
    <string name="topoffer">Offer</string>
    <string name="updatestatue">Update Statues</string>
    <string name="updatedstatus">Updated Statues Order Succefully</string>
    <string name="editprof">Edit Profile</string>
    <string name="confirm">Confirm</string>
    <string name="visitwashing">At Service Center</string>
    <string name="noproduct">No Product Availble</string>
    <string name="allreviwes">Show All Reviwes</string>
    <string name="insertconfirmpassword">Please IInsert Confirm Password</string>
    <string name="rate">Rate</string>
    <string name="offer">Offer</string>
    <string name="guest">Skip login</string>
    <string name="pleaseloginfirst">Please Login First</string>
    <string name="vendorname">Vendor Name</string>
    <string name="placename">Place Name</string>
    <string name="distance">Distance</string>
    <string name="carmodels">Vehicle Model</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="contactus">Contact Us</string>
    <string name="newoffer">New Offers</string>
    <string name="currency">LE</string>

</resources>
