<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/bgregister"
    android:layout_height="match_parent"
    tools:context="com.example.ic.fixera.Fragments.language">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#f68423"
        android:id="@+id/toolbar">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signin"
                android:layout_centerInParent="true"
                android:textSize="@dimen/_20sdp"
                android:textColor="#fff"
                />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>
    <ImageView
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_90sdp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/toolbar"
        android:id="@+id/logo"
        android:layout_marginTop="@dimen/_30sdp"
        android:src="@drawable/logo"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:layout_centerInParent="true"
        android:textSize="@dimen/_20sdp"
        android:textColor="#fff"
        android:id="@+id/textwelcome"
        android:layout_below="@+id/logo"
        android:layout_marginTop="@dimen/_20sdp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chooselanguage"
        android:layout_centerInParent="true"
        android:textSize="@dimen/_16sdp"
        android:textColor="#fff"
        android:id="@+id/chostlonguage"
        android:layout_below="@+id/textwelcome"
        android:layout_marginTop="@dimen/_10sdp"
        />
    <Button
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:text="@string/arabic"
        android:layout_centerInParent="true"
        android:textSize="@dimen/_16sdp"
        android:textColor="#fff"
        android:background="@drawable/bclanguage"
        android:id="@+id/btn_Arabic"
        android:layout_below="@+id/chostlonguage"
        android:layout_marginTop="@dimen/_50sdp"
        />
    <Button
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:text="@string/english"
        android:layout_centerInParent="true"
        android:textSize="@dimen/_16sdp"
        android:textColor="#fff"
        android:background="@drawable/bclanguage"
        android:id="@+id/btn_English"
        android:layout_below="@+id/btn_Arabic"
        android:layout_marginTop="@dimen/_20sdp"
        />

</RelativeLayout>
