<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:fitsSystemWindows="true"
    android:background="@drawable/bgregister"
    tools:context="com.example.ic.fixera.Fragments.Register">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ProgressBar
        android:id="@+id/progressBarRegister"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:visibility="gone" />

  <ImageView
    android:layout_width="@dimen/_80sdp"
    android:layout_height="@dimen/_60sdp"
    android:layout_centerHorizontal="true"
    android:layout_below="@+id/toolbar"
    android:id="@+id/logo"
    android:layout_marginTop="@dimen/_20sdp"
    android:src="@drawable/logo"
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:layout_centerInParent="true"
        android:textSize="@dimen/_15sdp"
        android:textColor="#ce8227"
        android:textStyle="bold"
        android:id="@+id/textsignup"
        android:layout_below="@+id/logo"
        android:layout_marginTop="@dimen/_10sdp"
        />
<android.support.v7.widget.AppCompatEditText
    android:layout_width="match_parent"
    android:layout_height="@dimen/_40sdp"
    android:layout_marginTop="@dimen/_10sdp"
    android:layout_marginLeft="@dimen/_20sdp"
    android:layout_marginRight="@dimen/_20sdp"
    android:layout_below="@+id/textsignup"
    android:hint="@string/firstname"
    android:maxLines="1"
    android:textColor="#fff"
    android:textColorHint="#ce8227"
    android:id="@+id/E_FirstName"
    android:drawableRight="@drawable/name"
    android:padding="@dimen/_10sdp"
    android:textStyle="bold"
    app:backgroundTint="#ce8227"
    android:drawablePadding="@dimen/_10sdp"

    />
    <android.support.v7.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_below="@+id/E_FirstName"
        android:hint="@string/lastname"
        android:maxLines="1"
        android:id="@+id/E_LastName"
        android:textColor="#fff"
        android:textColorHint="#ce8227"
        android:drawableRight="@drawable/name"
        android:padding="@dimen/_10sdp"
        android:textStyle="bold"
        app:backgroundTint="#ce8227"
        android:drawablePadding="@dimen/_10sdp"

        />
    <android.support.v7.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_below="@+id/E_LastName"
        android:hint="@string/email"
        android:id="@+id/E_Email"
        android:maxLines="1"
        android:textColor="#fff"
        android:textColorHint="#ce8227"
        android:drawableRight="@drawable/email"
        android:padding="@dimen/_10sdp"
        android:textStyle="bold"
        app:backgroundTint="#ce8227"

        />
    <android.support.v7.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_below="@+id/E_Email"
        android:hint="@string/Phone"
        android:id="@+id/E_Phone"
        android:inputType="number"
        android:textColor="#fff"
        android:textColorHint="#ce8227"
        android:textStyle="bold"
        app:backgroundTint="#ce8227"
        android:drawablePadding="@dimen/_10sdp"

        android:maxLines="1"
        />
    <android.support.v7.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_below="@+id/E_Phone"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:id="@+id/E_Password"
        android:maxLines="1"
        android:textColor="#fff"
        android:textColorHint="#ce8227"
       android:drawableRight="@drawable/password"
        android:padding="@dimen/_10sdp"
        android:textStyle="bold"
        app:backgroundTint="#ce8227"
        android:drawablePadding="@dimen/_10sdp"

        />
    <android.support.v7.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_below="@+id/E_Password"
        android:hint="@string/carmodel"
        android:id="@+id/E_CarModel"
        android:textColor="#fff"
        android:textColorHint="#ce8227"
        android:maxLines="1"
        android:drawableRight="@drawable/modelcar"
        android:padding="@dimen/_10sdp"
        android:textStyle="bold"
        app:backgroundTint="#ce8227"
        android:drawablePadding="@dimen/_10sdp"

        />
    <android.support.v7.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_below="@+id/E_CarModel"
        android:hint="@string/year"
        android:inputType="number"
        android:id="@+id/E_CarYear"
        android:maxLines="1"
        android:textColor="#fff"
        android:textColorHint="#ce8227"
        android:drawableRight="@drawable/year"
        android:padding="@dimen/_10sdp"
        android:textStyle="bold"
        app:backgroundTint="#ce8227"
        android:drawablePadding="@dimen/_10sdp"

        />
    <Button
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_below="@+id/E_CarYear"
        android:background="#f58020"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:text="@string/signup"
        android:textSize="@dimen/_20sdp"
        android:id="@+id/Sign_Up"
        />
    </RelativeLayout>

    </ScrollView>
</RelativeLayout>
