<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context="com.example.ic.fixera.Fragments.Profile">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/profile"
         />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="#000"
        android:textSize="18sp"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        />

    <TextView
        android:id="@+id/T_Name"
        android:layout_width="129dp"
        android:layout_height="23dp"
        android:layout_toRightOf="@+id/name"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="@dimen/_20sdp"
        android:textSize="18sp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:textColor="#000"

        />

    <TextView
        android:id="@+id/Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="#000"
        android:textSize="18sp"
        android:layout_below="@+id/name"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_30sdp"
        />

    <TextView
        android:id="@+id/E_Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:textSize="18sp"
        android:layout_toRightOf="@+id/Email"
        android:layout_below="@+id/name"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        />

    <ProgressBar
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:id="@+id/progrossprofile"
        android:layout_centerInParent="true"
        android:visibility="gone"
        />
    <View
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:id="@+id/view"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_below="@+id/E_Email"
        android:background="#afafaf"/>

    <TextView
        android:id="@+id/language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Email"
        android:layout_alignStart="@+id/Email"
        android:layout_below="@+id/view"
        android:layout_marginTop="14dp"
        android:text="@string/language"
        android:textColor="#000"
        android:textSize="18sp" />
    <Button
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:text="@string/arabic"
        android:layout_centerInParent="true"
        android:textSize="@dimen/_16sdp"
        android:textColor="#000"
        android:background="@drawable/languagge"
        android:id="@+id/btn_Arabic"
        android:visibility="invisible"
        android:layout_below="@+id/language"
        android:layout_marginTop="@dimen/_20sdp"
        />
    <Button
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:text="@string/english"
        android:layout_centerInParent="true"
        android:textSize="@dimen/_16sdp"
        android:textColor="#000"
        android:background="@drawable/languagge"
        android:id="@+id/btn_English"
        android:visibility="invisible"
        android:layout_below="@+id/language"
        android:layout_marginTop="@dimen/_20sdp"
        />

    <View
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:id="@+id/view2"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_below="@+id/btn_English"
        android:background="#afafaf"/>

    <Button
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:layout_centerInParent="true"
        android:textSize="@dimen/_16sdp"
        android:textColor="#000"
        android:background="@drawable/languagge"
        android:id="@+id/btn_logout"
        android:layout_below="@+id/view2"
        android:layout_marginTop="@dimen/_20sdp"
        />
</RelativeLayout>
