<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="#fff"
    android:clickable="true"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_50sdp"
        android:textColor="#a4a4a4"
        android:text="@string/thanks"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150sdp"
        android:background="@drawable/bcshopping"
        android:layout_centerInParent="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orderid"
            android:layout_marginTop="@dimen/_30sdp"
             android:layout_marginLeft="@dimen/_40sdp"
            android:textColor="#000"
            android:id="@+id/order"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_toRightOf="@+id/order"
            android:textColor="#000"
            android:id="@+id/T_Order"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_below="@+id/order"
            android:layout_marginLeft="@dimen/_40sdp"
            android:textColor="#000"
            android:id="@+id/price"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_toRightOf="@+id/price"
            android:textColor="#000"
            android:layout_below="@+id/order"
            android:id="@+id/T_Price"
            />
    </RelativeLayout>

    <Button
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/bgbuttons"
        android:textAllCaps="false"
        android:id="@+id/finish"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/skip"
        android:layout_marginBottom="@dimen/_20sdp"
        android:textSize="@dimen/_20sdp"
        />
    </RelativeLayout>
</FrameLayout>