<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="#fff"
    android:layout_margin="@dimen/_10sdp"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:id="@+id/day"
        android:text="@string/day"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:id="@+id/T_Day"
        android:layout_toRightOf="@+id/on"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:id="@+id/on"
        android:text="@string/on"
        android:layout_below="@+id/day"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_toRightOf="@+id/on"
        android:layout_below="@+id/day"
        android:id="@+id/T_On"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:id="@+id/of"
        android:text="@string/of"
        android:layout_below="@+id/on"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_toRightOf="@+id/on"
        android:layout_below="@+id/on"
        android:id="@+id/T_Of"
        android:layout_marginBottom="@dimen/_20sdp"
        />
</RelativeLayout>